--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -5,7 +5,7 @@
     android:id="@+id/details_coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.detail.DetailsActivity">
+    tools:context=".ui.activity.detail.DetailActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar_layout"
